Remove min value and check by code to avoid an 500 error and implement token
